# SnakeEvolution

./: .gitignore  CMakeLists.txt  SConstruct  agent.tscn  camera_2D_world.gd  camera_2d.gd  camera_2d.gd.uid  food.gd  food.gd.uid  food.tscn  genome.gd  genome.tres  map_sprite_2D.gd  map_tile.gd  map_tile.gd.uid  player.gd  player.tscn  player.tscn1778294655.tmp  player.tscn8374059687.tmp  project.godot  world.gd  world.gd.uid  world.tscn  world.tscn388308628.tmp  world.tscn5365489111.tmp
assets/: body.png.import  food.png.import  icon.svg.import  mapTile.png.import
include/: game.h
project/: project.godot
project/assets/: head.png.import
project/resources/: agent_counter.tres  brain.tres  food_counter.tres  snakes_counter.tres
project/scenes/: agent.tscn  agent_ui.tscn  agent_ui.tscn8352792966.tmp  big_food.tscn  body_segment.tscn  player.tscn  player.tscn3488282005.tmp  small_food.tscn  snake.tscn  world.tscn  world.tscn12858342972.tmp  world.tscn8391972532.tmp
resources/: genome.tres
scenes/: agent.tscn  agent_ui.tscn  body_segment.tscn  food.tscn  player.tscn  player.tscn3427836019.tmp  snake.tscn  world.tscn
scripts/: body_segment.gd  body_segment.gd.uid  camera_snake.gd.uid  camera_world.gd  head.gd  map.gd  player.gd  world.gd
scripts/agent/: agent.gd  agent_ui.gd  agent_ui.gd.uid  brain.gd  brain.gd.uid  head.gd
scripts/body_segment/: body_segment.gd
scripts/snake/: camera_snake.gd  genome.gd.uid  head.gd  head.gd.uid  snake.gd
src/: brain.cpp  brain.hpp  game.cpp  layer.cpp  layer.hpp  main.cpp  register_types.cpp
(+31 files in other folders)
